2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* DependencyObject.cs:
	* FrameworkTemplate.cs: Hide the actual "_native" field and
	  only access it through the property.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* Application.cs: As every method in
	  INativeDependencyObjectWrapper is stateless and 100%
	  identical for every implementor, implement these as
	  extension methods to INativeDependencyObjectWrapper and make
	  the interface itself empty.

	* DependencyObject.cs: These methods no longer get emitted as
	  virtual :)

2010-06-28  Alan McGovern  <amcgovern@novell.com>

	* FrameworkElement.cs: Add MoonError* parameters to our
	  measure/arrange/UpdateLayout functions to ensure that errors
	  are propagated correctly.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* FrameworkTemplate.cs: Add a new method for setting the xaml
	buffer from managed.

2010-06-24  Jackson Harper  <jackson@ximian.com>

	* DependencyObject.cs: Expose a function for setting an objects
	namescope.

2010-06-22  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs: make AssemblyRegistration delegate type internal
	so we can get at it from the Dispatcher code.

2010-06-22  Alan McGovern  <amcgovern@novell.com>

	* TemplateBindingExpression.cs: Rewrite TemplateBindings to
	  not be leaky. We have to be careful to not store a reference
	  to the template owner otherwise we end up with a reference
	  cycle and cannot ever GC the source or target of the
	  TemplateBinding.

2010-06-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Clipboard.cs: Add missing null check on SetText

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Window.cs:
	* TextAlignment.cs:
	* WindowResizeEdge.cs:
	* DependencyObject.g.cs: Update to SL4 final API.

2010-06-16  Chris Toshok  <toshok@ximian.com>

	* Clipboard.cs: implement all this using our pal api.

2010-06-14  Chris Toshok  <toshok@ximian.com>

	* MessageBox.cs: track pal api changes.
