@@ -1,3 +1,8 @@
+2010-07-01  Jeffrey Stedfast  <fejj@novell.com>
+
+	* Deployment.cs (SystemTypefaces): New internal property binding
+	to get the system's GlyphTypefaceCollection.
+
 2010-07-01  Alan McGovern  <amcgovern@novell.com>
 
 	* DependencyObject.cs:
